Fixed issue with z-indexing and sim controls

--- a/src/projects/digital/site/src/containers/SimControls/index.scss
+++ b/src/projects/digital/site/src/containers/SimControls/index.scss
@@ -17,6 +17,7 @@
     &__area {
         display: flex;
         align-items: center;
+        z-index: 1;
 
         height: 35px;
         padding: 5px 10px;
@@ -119,6 +120,8 @@
         display: flex;
         align-items: center;
         flex-shrink: 0;
+
+        z-index: 2;
 
         width: 50px;
         height: 50px;
